# grundrisse

./: .gitignore  PROJECT.md  README.md  gel.toml  pyproject.toml
admin-interface/: README.md  docker-compose.yml
admin-interface/backend/: .env.example  Dockerfile  auth.py  config.py  database.py  main.py  requirements.txt  sources.py
admin-interface/backend/auth/: models.py  queries.py  routes.py  service.py
admin-interface/backend/auth/queries/: authenticate_user.edgeql  create_user.edgeql
admin-interface/backend/routes/: auth.py  dependencies.py  sources.py
admin-interface/backend/sources/: models.py  queries.py  routes.py  service.py
admin-interface/backend/sources/queries/: create_source.edgeql  delete_source.edgeql  get_all_sources.edgeql  get_source_by_id.edgeql
admin-interface/frontend/: nginx.conf
admin-interface/frontend/src/: App.css  App.tsx
admin-interface/frontend/src/components/: Dashboard.tsx  Login.tsx
dbschema/: default.gel
dbschema/migrations/: 00001-m1garax.edgeql
docs/: TECH.md
